2007-07-02  Thatcher Ulrich <tu@tulrich.com>
	* gameswf/gameswf_batch_test.py: ignore comment lines (starting
	with '#') in test files.  Add test_currentframe.txt to the list
	of passing tests.
	* gameswf/samples/test_currentframe.fla,swf: very simple test of
	_currentFrame.
	* gameswf/tests/test_currentframe.txt: new test to verify
	_currentFrame

2007-07-02  Thatcher Ulrich <tu@tulrich.com>
	* Makefile: add libpng files to win32_dependencies.zip
	* gameswf/gameswf_batch_test.py: update the automated test suite.
	Move the tests to separate files under tests/, and define a list
	of known passing tests.
	* gameswf/gameswf_test_ogl.cpp: Remove some extra output that cause
	tests to fail.
	* gameswf/tests/*.txt: new test definition files.  First line is
	the .swf to load, and the rest of the file is the expected trace
	output.

2007-07-01  Thatcher Ulrich <tu@tulrich.com>
	* Makefile: initial rule for win32_dependencies.zip.  Needs to be
	tested, also add freetype, etc.

2007-07-01  Vitaly Alexeev <tishka92@yahoo.com>

	Snapshot of movieclip of any nesting level is done properly
 	* gameswf/gameswf_video_ogl.cpp
 	* gameswf/plugins/lib3ds/gameswf_3ds.cpp

2007-06-28  Vitaly Alexeev <tishka92@yahoo.com>

	Snapshot of movieclip is used as texture for 3D model !
	(see /gameswf/plugins/lib3ds/test.fla)
 	* gameswf/gameswf_as_classes/as_netstream.cpp
 	* gameswf/gameswf_text.cpp
 	* gameswf/gameswf_text.h
 	* gameswf/gameswf_video_impl.cpp
 	* gameswf/gameswf_video_impl.h
 	* gameswf/plugins/lib3ds/gameswf_3ds.cpp
 	* gameswf/plugins/lib3ds/gameswf_3ds.h
 	* gameswf/plugins/lib3ds/test.fla
 	* gameswf/plugins/lib3ds/test.swf

2007-06-28  Vitaly Alexeev <tishka92@yahoo.com>

	Added misc transform_by_inverse(rect), added twips_to_pixels() & pixels_to_twips() methods
	to rect & point struct, added find_target(as_value) to struct character, fixed 3DS file loader:
	new instance replaces target now, optimized _width & _height stuff
 	* gameswf/gameswf.h: